<resources>
    <string name="app_name">Hangman</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="c_button">C</string>
    <string name="d_button">D</string>
    <string name="e_button">E</string>
    <string name="f_button">F</string>
    <string name="g_button">G</string>
    <string name="h_button">H</string>
    <string name="i_button">I</string>
    <string name="j_button">J</string>
    <string name="k_button">K</string>
    <string name="l_button">L</string>
    <string name="m_button">M</string>
    <string name="n_button">N</string>
    <string name="o_button">O</string>
    <string name="p_button">P</string>
    <string name="q_button">Q</string>
    <string name="r_button">R</string>
    <string name="s_button">S</string>
    <string name="t_button">T</string>
    <string name="u_button">U</string>
    <string name="v_button">V</string>
    <string name="w_button">W</string>
    <string name="x_button">X</string>
    <string name="y_button">Y</string>
    <string name="z_button">Z</string>
    <string name="new_game_button">New Game</string>
    <string name="game_name">HANGMAN</string>
    <string name="initial">initial</string>

    <string name="absurd">absurd</string>
    <string name="luxury">luxury</string>
    <string name="avenue">avenue</string>
    <string name="topaz">topaz</string>
    <string name="fulfill">fulfill</string>
    <string name="marquis">marquis</string>
    <string name="emboss">emboss</string>
    <string name="frivolous">frivolous</string>

</resources>