<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/game_name"/>

    <ImageView
        android:id="@+id/initial"
        android:layout_width="162dp"
        android:layout_height="107dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:contentDescription="@string/initial"
        android:src="@drawable/hangman6"/>
<!--
    <TextView
        android:id="@+id/gameLost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/loss"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_margin="5dp"/>
    -->

    <TextView
        android:id="@+id/gameEnd"
        android:layout_width="18dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:textSize="26sp"
        android:layout_marginBottom="5dp"
        tools:text="__ABCD______" />

    <TextView
        android:id="@+id/lettersUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        tools:text="Used Letters: A,B,C,D,E,F,G"/>


    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/new_game_button"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lettersLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp">
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#0000FF"
        android:textColor="#FFFFFF"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/a_button"
            android:layout_margin="2dp"
            android:text="@string/a_button"/>

        <Button
            android:id="@+id/b_button"
            android:layout_margin="2dp"
            android:text="@string/b_button"/>

        <Button
            android:id="@+id/c_button"
            android:layout_margin="2dp"
            android:text="@string/c_button"/>

        <Button
            android:id="@+id/d_button"
            android:layout_margin="2dp"
            android:text="@string/d_button" />

        <Button
            android:id="@+id/e_button"
            android:layout_margin="2dp"
            android:text="@string/e_button" />

        <Button
            android:id="@+id/f_button"
            android:layout_margin="2dp"
            android:text="@string/f_button" />

        <Button
            android:id="@+id/g_button"
            android:layout_margin="2dp"
            android:text="@string/g_button" />

        <Button
            android:id="@+id/h_button"
            android:layout_margin="2dp"
            android:text="@string/h_button" />

        <Button
            android:id="@+id/i_button"
            android:layout_margin="2dp"
            android:text="@string/i_button" />

        <Button
            android:id="@+id/j_button"
            android:layout_margin="2dp"
            android:text="@string/j_button" />

        <Button
            android:id="@+id/k_button"
            android:layout_margin="2dp"
            android:text="@string/k_button" />

        <Button
            android:id="@+id/l_button"
            android:layout_margin="2dp"
            android:text="@string/l_button" />

        <Button
            android:id="@+id/m_button"
            android:layout_margin="2dp"
            android:text="@string/m_button" />

        <Button
            android:id="@+id/n_button"
            android:layout_margin="2dp"
            android:text="@string/n_button" />

        <Button
            android:id="@+id/o_button"
            android:layout_margin="2dp"
            android:text="@string/o_button" />

        <Button
            android:id="@+id/p_button"
            android:layout_margin="2dp"
            android:text="@string/p_button" />

        <Button
            android:id="@+id/q_button"
            android:layout_margin="2dp"
            android:text="@string/q_button" />

        <Button
            android:id="@+id/r_button"
            android:layout_margin="2dp"
            android:text="@string/r_button" />

        <Button
            android:id="@+id/s_button"
            android:layout_margin="2dp"
            android:text="@string/s_button" />

        <Button
            android:id="@+id/t_button"
            android:layout_margin="2dp"
            android:text="@string/t_button" />

        <Button
            android:id="@+id/u_button"
            android:layout_margin="2dp"
            android:text="@string/u_button" />

        <Button
            android:id="@+id/v_button"
            android:layout_margin="2dp"
            android:text="@string/v_button" />

        <Button
            android:id="@+id/w_button"
            android:layout_margin="2dp"
            android:text="@string/w_button" />

        <Button
            android:id="@+id/x_button"
            android:layout_margin="2dp"
            android:text="@string/x_button" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

    <Button
        android:id="@+id/y_button"
        android:layout_margin="2dp"
        android:text="@string/y_button" />

    <Button
        android:id="@+id/z_button"
        android:layout_margin="2dp"
        android:text="@string/z_button" />

    </GridLayout>

</LinearLayout>
